--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,10 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
-helmCharts:
-  - name: csi-s3
-    releaseName: csi-s3
-    namespace: kube-system
-    version: 0.35.5
-    valuesFile: values.yaml
-    repo: https://github.com/yandex-cloud/k8s-csi-s3/tree/master/deploy/helm
+resources:
+  - sc_cfg-files.yaml
+  - sealedsecret_s3-access.yaml
