--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -2,4 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - sc_cfg-files.yaml
+  - sc_server-data.yaml
   - sealedsecret_s3-access.yaml
+  - volume_server-data.yaml
